src/components/CollectionsAndPalettes/common/CollectionsToolbar/CollectionsToolbar.module.scss
@import "styles/global";
@import "styles/variablesscss.scss";

.toolbarContainer {
  width: 100%;
  padding-top: 13px;
  @include mobile-media {
    padding: 0 10px;
  }
}

.title {
  line-height: 28pt;
  font-size: var(--font-size-title);
  font-weight: var(--font-weight-medium);
  color: $primary-color-user;
  padding-right: $margin-small;
  @include mobile-media {
    font-size: 28px;
    margin-top: 8px;
  }
}

.toolbarContent {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  @include mobile-media {
    flex-direction: column;
    align-items: start;
    row-gap: 10px;
    margin-bottom: 5px;
    margin-top: 5px;
  }
}

.navigationButtons {
  display: flex;
  flex-direction: row;
  column-gap: 3px;
  @include mobile-media {
    overflow: scroll;
    width: 100%;
    column-gap: 8px;
    div {
      min-width: 140px;
      white-space: nowrap;
    }
  }
}

.noOfCollections {
  font-size: var(--font-size-md);
}

a {
  text-decoration: none;
}

.toolbarSwitch {
  display: flex;
  flex-direction: row;
  align-items: center;
  column-gap: $margin-small-4;
  @media (max-width: 520px) {
    order: -1;
  }

  .navSwitch {
    display: flex;
    border-radius: 24px;
    box-shadow: inset 2px 2px 5px 0 #e0dfdd, inset -2px -2px 5px 0 #ffffff;
    background-blend-mode: soft-light, normal;
    background-image: linear-gradient(279deg, #000000, #ffffff 0%),
      linear-gradient(to bottom, #f9f7f5, #f9f7f5);
    position: relative;
    @media (max-width: 520px) {
      background-image: none;
    }

    i {
      margin-right: 7px;
    }

    a {
      div {
        border: none;
        width: 90px;
        color: rgba(#615c58, 0.6);
      }
    }
  }
}

.toolbarInfo {
  display: flex;
  justify-content: space-between;
  align-items: center;

  .titleFlex {
    display: flex;
    align-items: center;

    i {
      font-size: var(--font-size-xl);
      height: 100%;
      margin-top: 10px;
      cursor: pointer;
      @include mobile-media {
        margin-top: 15px;
      }
    }

    .collectionEditDropdown {
      position: absolute;
      flex-direction: column;
      border-radius: 5px;
      z-index: 100;
      user-select: none;
      -webkit-backdrop-filter: blur(5px);
      backdrop-filter: blur(5px);
      box-shadow: 10px 10px 20px 0 rgba(17, 17, 17, 0.3),
        10px 10px 20px 0 rgba(17, 17, 17, 0.3);
      border: solid 2px rgba(255, 255, 255, 0.34);
      background-blend-mode: soft-light, normal;
      background-image: linear-gradient(
          318deg,
          rgba(255, 255, 255, 0.85) 100%,
          rgba(255, 255, 255, 0.85) -5%
        ),
        linear-gradient(
          to bottom,
          rgba(255, 255, 255, 0.72),
          rgba(255, 255, 255, 0.72)
        );
      padding: 10px 0;
      margin: 0;

      &.closed {
        display: none;
      }

      &.opened {
        display: flex;
        @media (max-width: 520px) {
          right: 20px;
          margin-top: 10px;
        }
      }

      a {
        padding: 10px $margin-small-4;
        cursor: pointer;

        &:hover {
          box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05);
        }
      }
    }
  }
}

.renameInput {
  line-height: 28pt;
  font-size: var(--font-size-title);
  font-weight: var(--font-weight-medium);
  color: #2f2f2f;
  padding: 0;
  //padding-right: 5px;
  border: none;
  outline: none;
  width: auto;
}

.collaborators {
  display: flex;
  align-items: center;
  @media (max-width: 520px) {
    display: none;
  }
}

.floatingShare {
  display: none;
  position: absolute;
  right: $margin-small-4;
  top: 10px;
  @media (max-width: 520px) {
    display: block;
  }
}

@media (max-width: 520px) {
  .hide {
    display: none;
  }
}

